--- a/app/config.json
+++ b/app/config.json
@@ -8,7 +8,7 @@
         "fonts": "fonts/",
         "assets": "assets/",
         "src": "00_src/",
-        "dist": "01_dist/",
+        "dist": "../static/",
         "tasks": "02_tasks/"
     }
 }
